src/index.css
/* ./src/index.css */
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  @font-face {
    font-family: Montserrat;
    font-weight: 400;
    src: url(./fonts/Montserrat-Regular.ttf) format("truetype");
  }
  
  @font-face {
    font-family: OpenSans;
    font-weight: 400;
    src: url(./fonts/OpenSans-Regular.ttf) format("truetype");
  }
  
  html {
    scroll-behavior: smooth;
  }
}

@layer utilities {
  .darken:hover {
    filter: brightness(85%) contrast(115%);
  }
}

